src/objects/Mogli_SMS__Gateway__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__CustomSMSServiceHandler__c</fullName>
        <label>Custom SMSServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__CustomWebServiceHandler__c</fullName>
        <label>Custom WebServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__OpenFNProject__c</fullName>
        <label>OpenFNProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__OpenFnSecret__c</fullName>
        <label>OpenFnSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetAPIKey__c</fullName>
        <label>TelerivetAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetPhoneId__c</fullName>
        <label>TelerivetPhoneId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetProjectID__c</fullName>
        <label>TelerivetProjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetSecret__c</fullName>
        <label>TelerivetSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TwilioAccountSid__c</fullName>
        <label>Twilio AccountSid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TwilioAuthToken__c</fullName>
        <label>Twilio AuthToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TwilioUseNotifyService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Twilio Notify Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Twilio_Notify_ServiceSid__c</fullName>
        <description>This is the SID for the notify service which will allow us to send notifications.  We will use this for bulkifying the sms messages of one message to 8000 phone numbers.</description>
        <label>Twilio Notify ServiceSid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtWireNumber__c</fullName>
        <label>TxtWireNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireAPIKey__c</fullName>
        <label>TxtwireAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireProgramID__c</fullName>
        <label>TxtwireProgramID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireSourceAddress__c</fullName>
        <label>TxtwireSourceAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireVersion__c</fullName>
        <label>TxtwireVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__WebHookIdentifier__c</fullName>
        <label>WebHook Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_Gateway_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous Gateway Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <description>Displays the Department of the user assigned to receive notifications</description>
        <formula>User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for the user who will receive notifications for the related gateway.</description>
        <inlineHelpText>The user who should receive notifications for this number.</inlineHelpText>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Applicant Portal (FB) Community</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Gateways</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gateway</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__PhoneNumber__c</columns>
        <columns>Mogli_SMS__WebHookIdentifier__c</columns>
        <columns>Mogli_SMS__DisplaySequence__c</columns>
        <columns>Mogli_SMS__Inactive__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gateways</pluralLabel>
    <recordTypes>
        <fullName>Mogli_SMS__Custom</fullName>
        <active>true</active>
        <description>Custom Gateway</description>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mogli_SMS__Telerivet</fullName>
        <active>true</active>
        <label>Telerivet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mogli_SMS__Textwire</fullName>
        <active>true</active>
        <label>Textwire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mogli_SMS__Twilio</fullName>
        <active>true</active>
        <description>Twilio Gateway</description>
        <label>Twilio</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mogli_SMS__TwilioNotifyServiceSIDExists</fullName>
        <active>true</active>
        <description>Checks to see if the Twilio Notify Service SID field is populated</description>
        <errorConditionFormula>AND( Mogli_SMS__TwilioUseNotifyService__c , ISBLANK( Mogli_SMS__Twilio_Notify_ServiceSid__c ) )</errorConditionFormula>
        <errorDisplayField>Mogli_SMS__TwilioUseNotifyService__c</errorDisplayField>
        <errorMessage>You must enter a Twilio Notify Service SID in order to use Twilio Notify Service.</errorMessage>
    </validationRules>
</CustomObject>